fix: hero section spacing and padding

--- a/landing-page/src/scss/_hero.scss
+++ b/landing-page/src/scss/_hero.scss
@@ -1,11 +1,13 @@
 @import "./colors";
 
 .hero {
-  margin-top: 20px;
+  // margin-top: 20px;
+  padding:5% 10px;
   h1 {
     text-align: center;
-    font-size: 6em;
-    width: 60%;
+    font-size: 5rem;
+    max-width:800px;
+    // width: 60%;
     margin: auto;
     font-weight: 600;
     span {
@@ -14,15 +16,20 @@
   }
   p {
     text-align: center;
-    width: 90%;
+    // width: 90%;
+    max-width:700px;
+    padding:10px;
     margin: auto;
-    font-size: 20px;
+    // font-size: 20px;
   }
   center {
-    margin-top: 40px;
+    // margin-top: 40px;
     a {
       background-color: $accent;
       font-size: 15px;
+      display:block;
+      width:150px;
+      margin:10px auto;
       color: #fff;
       text-decoration: none;
       padding: 10px 20px;
@@ -38,7 +45,7 @@
       width: 100%;
     }
     p {
-      margin-top: 20px;
+      // margin-top: 20px;
     }
   }
 }
