--- a/landing-page/src/scss/index.scss
+++ b/landing-page/src/scss/index.scss
@@ -1,12 +1,13 @@
 @import "./colors";
 @import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
 :root {
-  font-family: Poppins, sans-serif;
+  font-family:"Georama", Poppins, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  // background-color: #242424;
+  background-color: #000;
 }
 
 body {
